		it into libpqswip.c with license info &c., and switch ifndefs to ifdefs)
	- bind_param() will convert from 1,0 to TRUE/FALSE when pg_type
		is PGBOOLOID.
	- Fixed many heap buffer overruns.
	- Fixed column_info so NULLABLE field shows correctly. [kevin@sysexperts.com]
	- Added support for the get_info() method [Greg Sabino Mullane]

1.22 Wed Mar 26 22:33:44 EST 2003
	- Win32 compile fix for snprintf [Joe Spears]
	- Fix memory allocation problem in bytea escaping [Barrie Slaymaker]
	- Add utf8 support [Dominic Mitchell <dom@semantico.com>]
	- Transform Perl arrays into PostgreSQL arrays [Alexey Slynko]
	- Fix for foreign_key_info() [Keith Keller]
	- Fix PG_TEXT parameter binding
	- Doc cleanups [Greg Sabino Mullane]
	- Fix warning from func($table, 'table_attributes') [Greg Sabino Mullane]
	- Added suppport for schemas [Greg Sabino Mullane]
	- Fix binary to a bytea field conversion [Chris Dunlop <chris@onthe.net.au>]

1.21 Sun Jan 12 21:00:44 EST 2003
	- System tables no longer returned by tables(). [Dave Rolsky]
	- Fix table_attributes to handle removal of pg_relcheck in 7.3,
		from Ian Barwick <barwick@gmx.net>
	- Properly reset transaction status after failed transaction when
		autocommit is off.  Properly report transaction failure message.
		Kai <kai@xs4all.nl>
	- New pg_bool_tf database handle that when set to true booleans are
		returned as 't'/'f' rather than 1/0.

1.20  Wed Nov 27 16:19:26 2002
	- Maintenance transferred to GBorg,
		http://gborg.postgresql.org/project/dbdpg/projdisplay.php. Incremented
		version number to reflect new management. [Bruce Momjian]
	- README cleaned up. [Bruce Momjian]
	- Added t/15funct.t, a series of tests that determine if the meta data
		is working. [Thomas Lowery]
	- Added implementations of column_info() and table_info(), and
		primary_key_info(). [Thomas Lowery]
	- The POD formatting was cleaned up. [David Wheeler]
	- The preparser was updated to better handle escaped characters.
		[Rudy Lippan]