@@ -38,6 +38,7 @@ t/13pgtype.t
 t/15funct.t
 t/16pgbooltf.t
 t/17arrays.t
+t/99_pod.t
 t/99cleanup.t
 t/lib/App/Info.pm
 t/lib/App/Info/Handler.pm
