@@ -32,6 +32,7 @@
 	- Fixed many heap buffer overruns.
 	- Fixed column_info so NULLABLE field shows correctly. [kevin@sysexperts.com]
 	- Added support for the get_info() method [Greg Sabino Mullane]
+        - Added tests for POD validation [Mark Stosberg]
 
 1.22 Wed Mar 26 22:33:44 EST 2003
 	- Win32 compile fix for snprintf [Joe Spears]
